# GANADO

./: .env.example  .gitignore  AGENTS.md  BE-0.5_backlog_historias_backend.md  COMPONENTES-COMPLETADOS.md  FE-0.4-BACKLOG-HISTORIAS-FRONTEND.md  LAYOUT-COMPLETADO.md  README.md  README_BE_1_2.txt  README_BE_2_2_FASTAPI_AGREGADO.md  archivo.md  config.py  docker-compose.yml  iniciar.bat  main.py  middleware.ts  models.py  mqtt_client.py  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  simulator.py  tailwind.config.ts  tcp_server.py  tsconfig.json
api_gateway/: main.py
core/: config.py
tarea_2.1/backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
tarea_2.1/backend/.github/: pull_request_template.md
tarea_2.1/backend/alembic/versions/: 0001_modelo_inicial.py  0002_be_1_2_camaras_frames.py
tarea_2.1/backend/core/: config.py  db.py  logging.py
tarea_2.1/backend/docs/: git_workflow.md
tarea_2.1/backend/docs/architecture/: architecture.md
tarea_2.1/backend/docs/backlog/: historias_backend.md
tarea_2.1/backend/docs/db/: erd.dot  modelo_inicial.sql
tarea_2.1/backend/docs/fase_2/: BE-2.1_predict_weight.md  BE-2.2_motor_reglas_alertas.md
tarea_2.1/backend/domains/alertas/: models.py  router.py  rule_engine.py  schemas.py
tarea_2.1/backend/domains/camaras/: frame_ingestor.py  schemas.py
tarea_2.1/backend/domains/ganado/: models.py
tarea_2.1/backend/domains/ia/: models.py  router.py  service.py
tarea_2.1/backend/scripts/: seed.sql  seed_reglas_alerta.sql
tarea_2.1/backend/tests/: test_predict_weight.py
(+246 files in other folders)
