[tool.poetry]
name = "ganadovision-backend"
version = "0.1.0"
description = "Fase 0 Backend - FastAPI + PostgreSQL + Redis"
authors = ["Equipo Backend"]
packages = [
  { include = "api_gateway" },
  { include = "core" },
  { include = "domains" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.4.0"
redis = "^5.0.0"
structlog = "^24.4.0"
alembic = "^1.13.0"
python-dotenv = "^1.0.1"
opencv-python-headless = "^4.10.0.84"
numpy = "^2.0.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
